--- a/index.html
+++ b/index.html
@@ -10,6 +10,28 @@
 <body>
     <!-- Denna fil skall alltid heta index.html och är den första filen på en hemsida --- nytt test -->
 
+<section id = "gridWrapper">
+
+    <header id="head">Header</header>
+ 
+    <article id="article1">Article1</article>
+    <article id="article2">Article2</article>
+    <article id="article3">Article3</article>
+    
+    <article id="article4">Bottom Article</article>
+
+    <footer id="foot">Footer</footer>
+
+
+
+
+
+
+</section>
+
+
+
+
 <script src="js/script.js"></script>
 </body>
 </html>
